Change title to 'Happy Birthday'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Happy Birthday Ngoc Tien</title>
+    <title>Happy Birthday</title>
     <!-- Google Fonts: Roboto, Nunito, Montserrat, Unbounded, Playfair Display, Cormorant -->
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Nunito:wght@400;700&family=Montserrat:wght@400;700&family=Unbounded:wght@400;700&family=Playfair+Display:wght@400;700&family=Cormorant:wght@400;700&display=swap"
